--- a/LaCroute.csproj
+++ b/LaCroute.csproj
@@ -23,4 +23,8 @@
     <None Include="Views\Shared\_Header.razor" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
